--- a/package.json
+++ b/package.json
@@ -9,8 +9,22 @@
   "categories": [
     "Snippets"
   ],
+  "capabilities": {
+    "virtualWorkspaces": true,
+    "untrustedWorkspaces": {
+      "supported": true
+    }
+  },
+  "activationEvents": [
+    "onLanguage:php",
+    "onStartupFinished"
+  ],
   "contributes": {
     "snippets": [
+      {
+        "language": "php",
+        "path": "./lib/snippets/generated.json"
+      },
       {
         "language": "php",
         "path": "./snippets/model.json"
@@ -22,7 +36,49 @@
       {
         "language": "php",
         "path": "./snippets/serviceprovider.json"
+      },
+      {
+        "language": "php",
+        "path": "./snippets/controller.json"
+      },
+      {
+        "language": "php",
+        "path": "./snippets/response.json"
       }
     ]
+  },
+  "scripts": {
+    "vscode:prepublish": "npm compile",
+    "compile": "rm -rf lib; tsc -p ./ --noEmit false --module commonjs --outDir lib",
+    "compile:dev": "rm -rf lib; tsc -p ./ --noEmit false --module commonjs --outDir lib",
+    "lint": "eslint --ext .js,.ts,.tsx ./src/",
+    "watch": "tsc -watch -p ./",
+    "typescript": "tsc --noEmit"
+  },
+  "dependencies": {
+    "prettier": "2.5.1"
+  },
+  "peerDependencies": {
+    "prettier": "^2"
+  },
+  "devDependencies": {
+    "@babel/cli": "7.17.0",
+    "@babel/eslint-parser": "7.17.0",
+    "@babel/preset-typescript": "7.16.7",
+    "@types/node": "17.0.16",
+    "@types/prettier": "2.4.3",
+    "@types/vscode": "^1.60.0",
+    "@typescript-eslint/eslint-plugin": "5.11.0",
+    "@typescript-eslint/parser": "5.11.0",
+    "eslint": "8.8.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-babel": "5.3.1",
+    "eslint-plugin-eslint-comments": "3.2.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jest": "26.1.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-simple-import-sort": "7.0.0",
+    "prettier": "2.5.1",
+    "typescript": "4.5.5"
   }
 }
