--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "Laravel Vscode Snippets",
   "description": "",
   "version": "0.0.1",
+  "main": "./lib/index.js",
   "engines": {
     "vscode": "^1.76.0"
   },
@@ -49,6 +50,7 @@
   },
   "scripts": {
     "vscode:prepublish": "npm compile",
+    "test": "ts-node ./src/test.ts",
     "compile": "rm -rf lib; tsc -p ./ --noEmit false --module commonjs --outDir lib",
     "compile:dev": "rm -rf lib; tsc -p ./ --noEmit false --module commonjs --outDir lib",
     "lint": "eslint --ext .js,.ts,.tsx ./src/",
@@ -56,7 +58,7 @@
     "typescript": "tsc --noEmit"
   },
   "dependencies": {
-    "prettier": "2.5.1"
+    "prettier": "^2"
   },
   "peerDependencies": {
     "prettier": "^2"
@@ -65,7 +67,7 @@
     "@babel/cli": "7.17.0",
     "@babel/eslint-parser": "7.17.0",
     "@babel/preset-typescript": "7.16.7",
-    "@types/node": "17.0.16",
+    "@types/node": "^17.0.16",
     "@types/prettier": "2.4.3",
     "@types/vscode": "^1.60.0",
     "@typescript-eslint/eslint-plugin": "5.11.0",
@@ -79,6 +81,8 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "prettier": "2.5.1",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.5.0",
     "typescript": "4.5.5"
   }
 }
